# cchol

./: .gitignore  Cargo.toml  README.md
cchol-cli/: Cargo.toml
cchol-cli/src/: main.rs
cchol-lib/: Cargo.toml
cchol-lib/data/: adventurer.json  animal.json  color.json  criminals.json  culture.json  deity.json  ebloc.json  land_titles.json  monsters.json  nobility.json  people_govtoff.json  personality.json  race.json  shape.json  skill.json  wealth.json  work_attitude.json
cchol-lib/src/: animal.rs  body.rs  events.rs  ext.rs  lib.rs  misc.rs  modifier.rs  named.rs  pc.rs  people.rs  places.rs  player.rs  racial.rs  roll_range.rs  serialize.rs  skill.rs  social.rs  society.rs  stat.rs  string_manip.rs  traits.rs  workpad.rs
cchol-lib/src/animal/: pet.rs
cchol-lib/src/body/: birthmark.rs
cchol-lib/src/events/: racial_events.rs  unusual_birth_circumstances.rs
cchol-lib/src/ext/: natural_join.rs  zero.rs
cchol-lib/src/misc/: benefit.rs  color.rs  datum.rs  defaults.rs  element.rs  material.rs  occupation.rs  serious_wound.rs  shape.rs  time_of_year.rs  time_period.rs
cchol-lib/src/modifier/: bimod.rs  cumod.rs  legitmod.rs  litmod.rs  solmod.rs  survivalmod.rs  timod.rs  wealthmod.rs
cchol-lib/src/people/: adventurers.rs  guardian.rs  monster.rs  relatives.rs
cchol-lib/src/places/: birthplace.rs
cchol-lib/src/places/birthplace/: exotic.rs
cchol-lib/src/racial/: monster.rs  race.rs
cchol-lib/src/skill/: literacy.rs  native_env.rs  survival.rs  unusual.rs
cchol-lib/src/social/: birth.rs  birth_legitimacy.rs  culture.rs  family.rs  lineage.rs  nobility.rs  people.rs  religion.rs  status.rs  wealth.rs
cchol-lib/src/social/people/: adventurer.rs  companion.rs  govt_official.rs  guardian.rs  others.rs  relative.rs  rival.rs
cchol-lib/src/society/: birth.rs  culture.rs  environment.rs  family.rs  nobility.rs  religion.rs  status.rs  wealth.rs
cchol-lib/src/string_manip/: hook_resolve.rs  pluralize.rs
cchol-lib/src/traits/: described.rs  named.rs  personality.rs  roll_range.rs
cchol-lib/src/traits/personality/: personality_al.rs  personality_bt.rs  personality_ex.rs  personality_ma.rs  personality_ph.rs  personality_sd.rs
cchol-lib/tests/: race.rs  unusual_skills.rs
src/: lib.rs  (+4 more)
(+16 files in other folders)
