[package]
name = "cchol"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
repository = "https://github.com/msukanen/cchol.git"
license = "MIT OR Apache-2.0"

[dependencies]
rpgassist = { path = "../rpgassist"}

[badges]
maintenance = { status = "experimental"}
