[package]
name = "cchol"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
repository = "https://github.com/msukanen/cchol.git"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rpgassist = { path = "../rpgassist"}
dicebag = "0.3"

[badges]
maintenance = { status = "experimental"}
