[package]
name = "cchol-cli"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
repository = "https://github.com/msukanen/cchol.git"
license = "MIT OR Apache-2.0"

[dependencies]
cchol-lib = { path = "../cchol-lib"}
rpgassist = "0.1"
clap = { version = "4.5", features = ["derive"]}

[badges]
maintenance = { status = "experimental"}
