[package]
name = "cchol-lib"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
repository = "https://github.com/msukanen/cchol.git"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
dicebag = "0.3"
rpgassist = "0.1"
log = "0.4"
env_logger = "0.11"
either = "1"

[badges]
maintenance = { status = "experimental"}
