[package]
name = "cchol-lib"
version = "0.1.1"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@gmail.com>"]
repository = "https://github.com/msukanen/cchol.git"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_jsonc = "1"
dicebag = "0.3"
rpgassist = "0.1"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.5"
hash_with = "0.1"
paste = "1"
cchol-pm = { path = "../cchol-pm" }
chrono = "0.4.42"
bitflags = { version = "2.10", features = ["serde"] }

[badges]
maintenance = { status = "experimental"}
